--- a/public/index.html
+++ b/public/index.html
@@ -2,17 +2,14 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="sketch.js" type="text/javascript"></script>
-    <link href="style.css" rel="stylesheet">
-    </link>
     <title>Drawing!</title>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.1.9/p5.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.1.9/addons/p5.sound.min.js"></script>
+    <link href="style.css" rel="stylesheet"></link>
 </head>
 <body>
     <h1>Drawing!</h1>
     <script type="text/javascript" src="/socket.io/socket.io.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.1.9/p5.js"></script>
-    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.1.9/addons/p5.sound.min.js"></script> -->
-    <script src="sketch.js"></script>
+    <script src="app.js" type="text/javascript"></script>
 </body>
 </html>
